# jasmin-web-gui

./: .coverage  .coverage.swp  .coveragerc  .dockerignore  .gitignore  .pg_pgpass.swp  Dockerfile  Dockerfile.rest  README.md  config.py  docker-compose.yml  entrypoint.sh  jcli.config.txt  joyce-entrypoint.sh  manage.py  pep8.sh  pyproject.toml  requirements.txt  setup.cfg  start_script.py  test.py
.github/workflows/: test.yml
adapter/: admin.py  apps.py  data_classes.py  models.py  router_pb.py  serializers.py  signals.py  smpp_pb.py  tasks.py  tests.py
adapter/migrations/: 0001_initial.py  __init__.py
docker/: nginx.conf
docs/: joyce-messaging-api.md
engine/: apps.py
quark/: __init__.py  asgi.py  celery.py  datasource.py.sample  middleware.py  private_settings.py  settings.py  urls.py  utils.py  wsgi.py
quark/adapter/: apps.py  models.py  router_pb.py  serializers.py  signals.py  smpp_pb.py  tests.py
quark/api/: apps.py  helper.py  urls.py  views.py
quark/crons/: __init__.py  jasmin_user_sync.py
quark/jasmin/: admin.py  apps.py  connection.py  import_config.py  models.py  reactor.py  router_pb.py  signals.py  smpp_pb.py  tests.py  urls.py
quark/messaging/: __init__.py  admin.py  api_docs_pdf.py  apps.py  authentication.py  clients.py  context_processors.py  forms.py  models.py  services.py  tasks.py  urls.py
quark/templates/: ack_template.html
quark/utils/: apps.py  crypto.py  fields.py  json.py  utils.py
quark/web/: apps.py  dashboard.py  urls.py  views.py
quark/workspace/: admin.py  apps.py  backend.py  models.py  urls.py
rabbitmq/: rabbitmq.conf
smppsim/: Dockerfile  README.md  entrypoint.sh
smppsim/conf/: logging.properties  smppsim.props
smppsim/www/: inject_mo.htm
static/: base.css
static/css/: base.css  modal.css  multi-select.css  (+3 more)
web/: apps.py  models.py  tests.py  urls.py  views.py
(+122 files in other folders)
